<resources>
    <string name="app_name">Academia</string>
    <string name="login">LOGIN</string>
    <string name="cpf">CPF:</string>
    <string name="senha">Senha</string>
    <string name="botao_entrar">ENTRAR</string>
    <string name="cadastrar">Criar Cadastro</string>
    <string name="esqueceu_senha">Esqueceu sua Senha</string>
    <string name="cadastro_titulo">Cadastro de Usuário</string>
    <string name="nome">Nome:</string>
    <string name="telefone">Telefone:</string>
    <string name="email">Email:</string>
    <string name="objetivo">Objetivo:</string>
    <string name="cadastrae">Cadastrar</string>
    <string name="voltar">Voltar</string>
    <string name="criar_senha">Crie a Senha:</string>
    <string name="confirme_senha">Confirme a Senha:</string>
    <string name="escolha_acao">Escolha a Ação</string>
    <string name="meus_dados">Meus Dados</string>
    <string name="criar_exercicio">Criar Exercicio</string>
    <string name="criar_treino">Criar Treino</string>
    <string name="meu_treino">Meu Treino</string>
    <string name="trocar_senha">Trocar Senha</string>
    <string name="idade">Idade:</string>
    <string name="dataNascimento">Data de Nascimento:</string>
    <string name="cadastrarExercicio">Cadastrar Exercicio</string>
    <string name="grupoMusculares">Grupo Musculares:</string>
    <string name="exercicio">Exercicio:</string>
    <string name="criarExercicio">Criar Exercicio</string>
    <string name="criarPlanoTreino">Criar Plano de Treino</string>
    <string name="sequencia">Série:</string>
    <string name="repeticao">Repetição:</string>
    <string name="salvar">Salvar</string>
    <string name="tipoExercicio">Tipo de Treino:</string>
    <string name="numeroTreino">Número do Treino:</string>
    <string name="meuTreino">Meu Treino</string>
    <string name="treino">Treino:</string>
    <string name="nada"></string>
    <string name="meusDados">Meus Dados</string>
    <string name="editar">Editar</string>
    <string name="fichaAluno">Criar Ficha do Aluno</string>
    <string name="ficha">Ficha do Aluno</string>
    <string name="frequencia">Frequência:</string>
    <string name="descanco">Descanço:</string>
    <string name="duracao">Duração:</string>
    <string name="dataInicio">Inicio:</string>
    <string name="dataFim">Fim:</string>
    <string name="pesoGrama">Peso em Grama:</string>
    <string name="alturaCm">Altura em Centimetros:</string>
    <string name="professor">Professor</string>
    <string name="alunos">Alunos</string>
    <string name="user">User</string>
    <string name="minhaFicha">Minha Ficha</string>


    <string-array name="gurpoMusculos">
        <item>Peito</item>
        <item>Costas</item>
        <item>Inferior</item>
        <item>Bicepes</item>
        <item>Tricepes</item>
    </string-array>

    <string-array name="tipoTreino">

    </string-array>


</resources>
