<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tela_principal"
    tools:context=".activity.ProfessorPrincipal">

    <Button
        android:id="@+id/alunoButton"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:scrollbarSize="4dp"
        android:text="@string/alunos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/dadosProfessorButton"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:scrollbarSize="4dp"
        android:text="@string/meus_dados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fichaAlunoButton" />

    <Button
        android:id="@+id/trocarSenhaButton"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:scrollbarSize="4dp"
        android:text="@string/trocar_senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/criarExercioButton" />

    <Button
        android:id="@+id/criarTreinoButton"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:scrollbarSize="4dp"
        android:text="@string/criar_treino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dadosProfessorButton" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/professor"
        android:textColor="@color/textos"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/criarExercioButton"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:scrollbarSize="4dp"
        android:text="@string/criar_exercicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/criarTreinoButton" />

    <Button
        android:id="@+id/fichaAlunoButton"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/fichaAluno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alunoButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>